#pragma once
#include <Enemigo.hpp>

class Dahl : public Enemigo
{
private:
    /* data */
public:
    Dahl(/* args */) {}
    ~Dahl() {}
};