class Destruible
{
private:
    /* data */
public:
    Destruible(/* args */) {}
    ~Destruible() {}
};