class Detonador
{
private:
    /* data */
public:
    Detonador(/* args */) {}
    ~Detonador() {}
};