#pragma once
#include <Enemigo.hpp>

class Doria : public Enemigo
{
private:
    /* data */
public:
    Doria(/* args */) {}
    ~Doria() {}
};