class ExtraVida
{
private:
    /* data */
public:
    ExtraVida(/* args */) {}
    ~ExtraVida() {}
};