class Fija
{
private:
    /* data */
public:
    Fija(/* args */) {}
    ~Fija() {}
};