class FireSuit
{
private:
    /* data */
public:
    FireSuit(/* args */) {}
    ~FireSuit() {}
};