class Fuego
{
private:
    /* data */
public:
    Fuego(/* args */) {}
    ~Fuego() {}
};