class Heart
{
private:
    /* data */
public:
    Heart(/* args */) {}
    ~Heart() {}
};