class Llama
{
private:
    /* data */
public:
    Llama(/* args */) {}
    ~Llama() {}
};