class Mejora
{
private:
    /* data */
public:
    Mejora(/* args */) {}
    ~Mejora() {}
};