class MejoraBomba
{
private:
    /* data */
public:
    MejoraBomba(/* args */) {}
    ~MejoraBomba() {}
};