#pragma once
#include "Enemigo.hpp"
#include "Actualizable.hpp"

class Minvo : public Enemigo, public Actualizable
{
private:
    /* data */
public:
    Minvo(/* args */) {}
    ~Minvo() {}
};