class Muro
{
private:
    /* data */
public:
    Muro(/* args */) {}
    ~Muro() {}
};