#pragma once
#include <Enemigo.hpp>

class Oneal : public Enemigo
{
private:
    /* data */
public:
    Oneal(/* args */) {}
    ~Oneal() {}
};