#pragma once
#include "Enemigo.hpp"
#include "Actualizable.hpp"

class Ovape : public Enemigo, public Actualizable
{
private:
    /* data */
public:
    Ovape(/* args */) {}
    ~Ovape() {}
};