class Pared
{
private:
    /* data */
public:
    Pared(/* args */) {}
    ~Pared() {}
};