#pragma once
#include <Enemigo.hpp>

class Pass
{
private:
    /* data */
public:
    Pass(/* args */) {}
    ~Pass() {}
};