class Patineta
{
private:
    /* data */
public:
    Patineta(/* args */) {}
    ~Patineta() {}
};