#pragma once

class Personaje
{
private:
    /* data */
public:
    Personaje(/* args */) {}
    ~Personaje() {}
};