#pragma once
#include <Enemigo.hpp>

class Pontan : public Enemigo
{
private:
    /* data */
public:
    Pontan(/* args */) {}
    ~Pontan() {}
};