class Salida
{
private:
    /* data */
public:
    Salida(/* args */) {}
    ~Salida() {}
};