class SignoInterrogacion
{
private:
    /* data */
public:
    SignoInterrogacion(/* args */) {}
    ~SignoInterrogacion() {}
};