#pragma once
#include <Enemigo.hpp>

class Valcom : public Enemigo
{
private:
    /* data */
public:
    Valcom(/* args */) {}
    ~Valcom() {}
};